xrpl-escrow-stdlib/tests/finish_result/compile_fail/succeed_with_negative.stderr
error[E0080]: evaluation panicked: succeed_with requires a positive code
 --> src/ctx/finish_result.rs
  |
  |         const { assert!(N > 0, "succeed_with requires a positive code") };
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `xrpl_escrow_stdlib::FinishResult::succeed_with::<-1>::{constant#0}` failed here

note: erroneous constant encountered
 --> src/ctx/finish_result.rs
  |
  |         const { assert!(N > 0, "succeed_with requires a positive code") };
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn xrpl_escrow_stdlib::FinishResult::succeed_with::<-1>`
 --> tests/finish_result/compile_fail/succeed_with_negative.rs:4:13
  |
4 |     let _ = FinishResult::succeed_with::<-1>();
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
